# Vibe

./: .gitignore  AGENTS.md  LICENSE  README.md  action.yml  pyproject.toml
vibe/: README.md  __init__.py  _version.py  agent_bridge.py  agents.py  ast.py  cache.py  calibration.py  ci.py  cli.py  delegation.py  diff.py  domain_profiles.py  effects.py  emitter.py  equivalence.py  generator_compliance_report.py  generator_julia.py  generator_nextflow.py  generator_python.py  generator_snakemake.py  generator_systemverilog.py  generator_typescript.py  generator_vhdl.py  genomics.py  grammar.py  hardware.py  interchange.py  ir.py  legal_compliance.py  lexer.py  manifest.py  merge_verify.py  negotiation.py  obligation_registry.py  package_manager.py  parser.py  proof.py  pyproject.toml  refinement.py  (+15 more)
vibe/calibration_corpus/: seed_corpus.json
vibe/examples/: agentora_agentception.vibe  edge_contract_ts.vibe  genomics_intent.vibe  genomics_intent_nextflow.vibe  hardware_intent.vibe  hardware_intent_systemverilog.vibe  legal_compliance_intent.vibe  legal_compliance_no_pii_logs.vibe  scientific_simulation_intent.vibe  scientific_simulation_reproducible.vibe  shared_intent_ts.vibe  sigil_basic.vibe  sigil_collective.vibe  sigil_temporal.vibe  sovereign_bridge.vibe  tesla_victory_layer.vibe
vibe/extensions/: __init__.py  demo_obligations.py
vibe/lsp/: __init__.py  code_actions.py  completion.py  definitions.py  diagnostics.py  documents.py  hover.py  lenses.py  semantic_tokens.py  server.py  symbols.py
vibe/phipython/: __init__.py  artifacts.py  doctor.py  doctor_profiles.py  engine.py  errors.py  explain.py  fix.py  patch.py  (+11 more)
(+90 files in other folders)
