[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe"
version = "0.1.0"
description = "Vibe: intent-first programming language and compiler prototype"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vibe Contributors" }]
license = { text = "MIT" }
keywords = ["compiler", "dsl", "intent", "verification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
vibec = "vibe.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["vibe*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
